final touch on GUI and filling in Javadoc